.openshift/route.yml
apiVersion: v1
kind: Route
metadata:
  name: spring-boot-with-infinispan
spec:
  to:
    kind: Service
    name: spring-boot-with-infinispan
